# network_manage

./: .cursorrules  .env  .env.example  .gitignore  README.md  check_template_data.py  check_template_data_with_db.py  init_db.py  init_templates.py  pyproject.toml  requirements.txt  service_layer_summary.md
app/: main.py
app/core/: __init__.py  config.py  credential_manager_fixed.py  dependencies.py  enums.py  exceptions.py  middleware.py  ratelimiter.py
app/models/: README.md  __init__.py  network_models.py
app/network_automation/: advanced_connection_pool.py  batch_operation_manager.py  config_diff_manager.py  config_rollback_manager.py  connection_manager.py  enhanced_connection_manager.py  high_performance_connection_manager.py  inventory_manager.py  network_tasks.py  performance_monitor.py  task_executor.py  websocket_cli_manager.py
app/repositories/: PERFORMANCE_OPTIMIZATION.md  __init__.py  base_dao.py  brand_dao.py  config_template_dao.py  device_dao.py  device_group_dao.py  device_model_dao.py  operation_log_dao.py  region_dao.py  template_command_dao.py
app/schemas/: __init__.py  advanced_operations.py  base.py  brand.py  config_diff.py  config_snapshot.py  config_template.py  device.py  device_connection_status.py  device_group.py  performance.py  (+7 more)
docs/: API_README.md  API端点替换完成报告.md  H3C自定义模板示例.md  TTP到TextFSM迁移完成报告.md  TextFSM解析器使用指南.md  功能完善完成报告.md  导入导出模块使用指南.md  性能优化完成报告.md  操作日志装饰器使用指南.md  服务层基类实现总结.md  模板初始化完成报告.md  结构化解析系统实现报告.md  网络自动化子系统详细设计.md  网络自动化子系统详细设计_扩展版.md  网络自动化核心开发计划.md  网络自动化模块重构完成报告.md  网络自动化第三阶段完成报告.md  网络设备自动化平台设计方案.md  解析器优化完成报告.md  通用导入导出工具使用指南.md  重构总结.md  错误处理和日志记录优化完成报告.md  集成指南.md  项目清理和验证完成报告.md  项目重构完成报告.md
(+68 files in other folders)
