[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Network_devices_management_system"
version = "0.1.0"
description = "基于 Fastapi 构建的网络设备管理系统"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "lijianqiao", email = "lijianqiao2906@live.com" }]
dependencies = [
    "aerich>=0.9.1",
    "aiohttp>=3.12.13",
    "asyncpg>=0.30.0",
    "asyncssh>=2.21.0",
    "cryptography>=45.0.4",
    "fastapi[standard]>=0.115.12",
    "fastexcel>=0.14.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "nornir>=3.5.0",
    "ntc-templates>=7.9.0",
    "openpyxl>=3.1.5",
    "polars>=1.31.0",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "redis[hiredis]>=6.2.0",
    "scrapli[asyncssh,community,paramiko]>=2025.1.30",  # 合并 scrapli-community
    "textfsm>=1.1.3",
    "tortoise-orm>=0.25.1",
    "uvicorn[standard]>=0.34.3",
    "xlsxwriter>=3.2.5",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.envs.dev]
dependencies = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [".git", "__pycache__", ".venv", ".vscode"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "W191"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.aerich]
tortoise_orm = "app.db.connection.TORTOISE_ORM"
location = "./migrations"
src_folder = "."